--- a/templates/homePage.html
+++ b/templates/homePage.html
@@ -6,6 +6,7 @@
             <div class="col-lg-12 text-center my-auto">
 
                 <small class="s-color">Welcome to my portfolio website!</small>
+                <div class="profile-pic shadow" style="background-image: url('/media/avatar/my_faceID_resized.jpg')"></div>
                 <div class="animated">
                     Hey, I'm<br>
                     <span class="color-primary" id="animated-name"></span>
